--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
-    "autoprefixer": "10.0.2",
+    "autoprefixer": "^10.0.2",
     "browser-sync": "2.26.13",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
